src/test/ui/rfc1598-generic-associated-types/pointer_family.stderr
error[E0109]: type parameters are not allowed on this type
  --> $DIR/pointer_family.rs:46:21
   |
LL |     bar: P::Pointer<String>,
   |                     ^^^^^^ type parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/pointer_family.rs:21:42
   |
LL |     fn new<T>(value: T) -> Self::Pointer<T>;
   |                                          ^ type parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/pointer_family.rs:29:42
   |
LL |     fn new<T>(value: T) -> Self::Pointer<T> {
   |                                          ^ type parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/pointer_family.rs:39:42
   |
LL |     fn new<T>(value: T) -> Self::Pointer<T> {
   |                                          ^ type parameter not allowed

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0109`.
